# neardebug

./: .gitignore  Cargo.toml  Justfile  README.mkd  flake.nix  index.html  loader.js  neardebug.css  rust-toolchain.toml
.github/workflows/: build-pages.yaml
src/: lib.rs  prepare.rs
src/near_vm_runner/: mod.rs  profile.rs
src/near_vm_runner/logic/: alt_bn128.rs  bls12381.rs  context.rs  errors.rs  gas_counter.rs  logic.rs  mod.rs  recorded_storage_counter.rs  types.rs  utils.rs  vmstate.rs
src/near_vm_runner/logic/mocks/: mock_external.rs  mock_memory.rs
