[package]
name = "neardebug"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
borsh = { version = "1.0.0", features = ["derive", "rc"] }
bn = { package = "zeropool-bn", version = "0.5.11", default-features = false }
ed25519-dalek = { version = "2.1.0", default-features = false }
finite-wasm = { version = "0.5.0", features = ["instrument"] }
near-crypto = "0.28.0"
near-parameters = { git = "https://github.com/near/nearcore" }
near-primitives-core = { git = "https://github.com/near/nearcore" }
ripemd = "0.1.1"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
stdx = { package = "near-stdx", version = "0.28.0" }
wasm-bindgen = "0.2.100"
wasm-encoder = "0.218"
thiserror = "2.0.11"
bytesize = { version = "1.3.0", features = ["serde"] }
num-rational = "0.4.2"
enum-map = { version = "2.7.3", features = ["serde"] }
strum = { version = "0.24.1" }
js-sys = "0.3.77"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
serde_json = "1.0.138"
serde-wasm-bindgen = "0.6.5"
serde_with = { version = "3.12.0", features = ["base64"] }
blst = "0.3"


[profile.dev]
debug = "full"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true
# omit-default-module-path = false
# split-linked-modules = false
